--- a/src/assets/NewEntry.css
+++ b/src/assets/NewEntry.css
@@ -1,15 +1,7 @@
-/* form {
-  margin-top: 40px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-} */
-
 .form-Handler {
   padding: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) 665px;
   gap: 45px 45px;
 }
 
@@ -40,8 +32,6 @@ textarea {
 
   outline-color: rgb(11, 184, 16);
 }
-.medical-history {
-}
 
 .reading-container {
   display: flex;
@@ -50,37 +40,20 @@ textarea {
   transition: 0.2s all;
 }
 
-.add {
-  font-size: 18px;
-  border: 1px solid grey;
-  display: flex;
-  align-items: center;
-  width: 100px;
-  border-radius: 30px;
+.pdf-button {
+  display: inline-block;
+  padding: 12px 30px;
+  margin: 10px;
+  color: #fff;
+  background-color: #ff6347;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  position: relative;
-  z-index: 100;
-  transition: 0.2s all;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-.add:active {
-  transform: scale(0.9);
-}
-
-.add-label {
-  text-transform: capitalize;
-  padding: 8px 15px 12px 8px;
-  user-select: none;
-  position: absolute;
-  right: 0;
-}
-
-.plus {
-  width: 36px;
-  fill: rgb(11, 184, 16);
-}
-
-.medicine {
-  display: flex;
-  gap: 30px;
+.pdf-button:hover {
+  background-color: #d74333;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
 }
